best scenarios based on positive outcomes

--- a/Calculate_ED_for_all_dataset.ipynb
+++ b/Calculate_ED_for_all_dataset.ipynb
@@ -478,11 +478,186 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These scripts are finding the best and worst sceaniors from the positive outcomes and negative outcomes. Condsider these as optional scripts.\n",
+    "transform percentage values, which might be stored as strings"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "vml4Si0OKQ15"
    },
+   "outputs": [],
+   "source": [
+    "def convert_percentage_to_float(percent_str):\n",
+    "    if percent_str == 0 or percent_str == '0':\n",
+    "        return 0.0\n",
+    "    try:\n",
+    "        return float(percent_str.replace('%', ''))\n",
+    "    except AttributeError: \n",
+    "        return float(percent_str)\n",
+    "\n",
+    "# Apply the function to the 'Positive Outcomes' column\n",
+    "result_df['Positive Outcomes'] = result_df['Positive Outcomes'].apply(convert_percentage_to_float)\n",
+    "\n",
+    "# Apply the function to the 'Negative Outcomes' column\n",
+    "result_df['Negative Outcomes'] = result_df['Negative Outcomes'].apply(convert_percentage_to_float)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Outcome difference =  positive outcomes - negative outcomes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_df['Outcome_Difference'] = result_df['Positive Outcomes'] - result_df['Negative Outcomes']\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find best scenarios based on positive outcomes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top Scenarios:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>THRESHOLD</th>\n",
+       "      <th>base_vector</th>\n",
+       "      <th>ED</th>\n",
+       "      <th>accepted_forecast</th>\n",
+       "      <th>Total Accepted Forecasts</th>\n",
+       "      <th>Positive Outcomes</th>\n",
+       "      <th>Negative Outcomes</th>\n",
+       "      <th>Outcome_Difference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>[0.6306922380608793, 0.8471957830516104, -1.61...</td>\n",
+       "      <td>2.174889</td>\n",
+       "      <td>[1.4373074160342503]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>100.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>[0.6306922380608793, 0.8471957830516104, -1.61...</td>\n",
+       "      <td>2.174889</td>\n",
+       "      <td>[1.4373074160342503]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>100.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2128</th>\n",
+       "      <td>1.5</td>\n",
+       "      <td>[0.17633951442754814, -0.5520039200266473, -0....</td>\n",
+       "      <td>0.901641</td>\n",
+       "      <td>[-0.48153946267619485, 0.44940302917710895, 0....</td>\n",
+       "      <td>3701</td>\n",
+       "      <td>50.26</td>\n",
+       "      <td>49.74</td>\n",
+       "      <td>0.52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     THRESHOLD                                        base_vector        ED  \\\n",
+       "63         0.5  [0.6306922380608793, 0.8471957830516104, -1.61...  2.174889   \n",
+       "63         0.5  [0.6306922380608793, 0.8471957830516104, -1.61...  2.174889   \n",
+       "2128       1.5  [0.17633951442754814, -0.5520039200266473, -0....  0.901641   \n",
+       "\n",
+       "                                      accepted_forecast  \\\n",
+       "63                                 [1.4373074160342503]   \n",
+       "63                                 [1.4373074160342503]   \n",
+       "2128  [-0.48153946267619485, 0.44940302917710895, 0....   \n",
+       "\n",
+       "      Total Accepted Forecasts  Positive Outcomes  Negative Outcomes  \\\n",
+       "63                           1             100.00               0.00   \n",
+       "63                           1             100.00               0.00   \n",
+       "2128                      3701              50.26              49.74   \n",
+       "\n",
+       "      Outcome_Difference  \n",
+       "63                100.00  \n",
+       "63                100.00  \n",
+       "2128                0.52  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "filtered_result_df = result_df[result_df['Total Accepted Forecasts'] > 0].copy()\n",
+    "best_positive_outcome_scenario = filtered_result_df.loc[filtered_result_df['Positive Outcomes'].idxmax()]\n",
+    "best_negative_outcome_scenario = filtered_result_df.loc[filtered_result_df['Negative Outcomes'].idxmin()]\n",
+    "best_total_forecasts_scenario = result_df.loc[result_df['Total Accepted Forecasts'].idxmax()]\n",
+    "\n",
+    "best_scenarios = pd.DataFrame([\n",
+    "    best_positive_outcome_scenario,\n",
+    "    best_negative_outcome_scenario,\n",
+    "    best_total_forecasts_scenario\n",
+    "])\n",
+    "\n",
+    "print(\"Top Scenarios:\")\n",
+    "display(best_scenarios)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
