write in txt file instead of csv

--- a/Calculate_ED_for_all_dataset.ipynb
+++ b/Calculate_ED_for_all_dataset.ipynb
@@ -17,7 +17,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xi5GaAFCD3eJ",
-        "outputId": "312ae444-72fd-4795-8192-21e97c047516"
+        "outputId": "78902d70-f719-4abb-c538-306d3594ec50"
       },
       "outputs": [
         {
@@ -141,7 +141,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "82ea1b91",
-        "outputId": "9f67906a-68da-4a40-c92a-5ee2ff50b8eb"
+        "outputId": "0a896f58-eeed-44e0-f712-3cf1ec00b21a"
       },
       "outputs": [
         {
@@ -190,27 +190,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "source": [
+        "def writeInText(r1_values, v_target_values, B, threshold, positive_percentage, negative_percentage):\n",
+        "  with open('final_result_df.txt', 'a') as f: # Changed mode to 'a' for append\n",
+        "    f.write(\"L set: \")\n",
+        "    f.write(\"r1: \")\n",
+        "    for r_list in r1_values:\n",
+        "        f.write(f\"{r_list} \")\n",
+        "\n",
+        "    f.write(\"v_target: \")\n",
+        "    f.write(\", \".join(map(str, v_target_values)))\n",
+        "\n",
+        "    f.write(\"\\nB vector: \")\n",
+        "    # Explicitly format B as comma-separated string without spaces\n",
+        "    f.write(f\"[{','.join(map(str, B))}]\")\n",
+        "\n",
+        "    f.write(\"\\nτ value: \")\n",
+        "    f.write(f\"{threshold}\")\n",
+        "\n",
+        "    f.write(\"\\n% of positive vtarget : \")\n",
+        "    f.write(f\"{positive_percentage}\\n\")\n",
+        "\n",
+        "    f.write(\"\\n% of negative vtarget : \")\n",
+        "    f.write(f\"{negative_percentage}\")\n",
+        "\n",
+        "    f.write(\"\\n\\n-------------------------------\\n\\n\")\n",
+        "print(\"Formatted results will be saved to 'final_result_df.txt' upon execution.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4G9MVyjDbRZX",
+        "outputId": "9d530e25-203c-4193-cba6-ffaac2b2559f"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Formatted results will be saved to 'final_result_df.txt' upon execution.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "aoqDsVKMXsCf",
-        "outputId": "29a3b9e1-f93a-4e2c-a45d-cf67bc40a8fc"
+        "outputId": "92cc2d4a-2b38-48f6-bda8-266c549ee8ec"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Started at => 2025-12-26 23:33:37.501559\n",
+            "Started at => 2025-12-27 11:29:02.905018\n",
             "\n",
             "-----Calculating Euclidean Distance-----\n",
             "\n",
             "T: --> 0.5--> 0.6--> 0.7--> 0.8--> 0.9--> 1.0--> 1.1--> 1.2--> 1.3--> 1.4--> 1.5\n",
-            "Results Different THRESHOLDS:\n",
-            "Finished at => 2025-12-26 23:53:25.701384\n",
-            "Total time take => 0:19:48.199825\n"
+            "Finished at => 2025-12-27 11:41:53.053070\n",
+            "Total time take => 0:12:50.148052\n"
           ]
         }
       ],
@@ -223,19 +269,22 @@
         "generated_base_vectors = np.random.uniform(low=-2.0, high=2.0, size=(50, 5))\n",
         "\n",
         "\n",
-        "final_results = []\n",
         "start_time = datetime.now()\n",
         "print(f\"Started at => {start_time}\")\n",
         "print(f\"\\n-----Calculating Euclidean Distance-----\\n\")\n",
         "print(\"T: \", end=\"\")\n",
+        "\n",
+        "# Clear the file before starting to avoid appending to previous runs\n",
+        "with open('final_result_df.txt', 'w') as f:\n",
+        "    pass\n",
+        "\n",
         "for current_threshold in np.arange(0.5, 1.51, 0.1):\n",
         "    print(f\"--> {current_threshold:.1f}\", end=\"\")\n",
-        "    accepted_results_list = []\n",
         "\n",
         "    # Iterate through each generated base vector\n",
         "    for gen_base_vec_idx in range(generated_base_vectors.shape[0]):\n",
         "        current_base_vector = generated_base_vectors[gen_base_vec_idx]\n",
-        "        base_vectors_for_each_threshold = []\n",
+        "        accepted_results_list = [] # Reset for each base vector within a threshold\n",
         "\n",
         "        for index, row in main_data.iterrows():\n",
         "            feature_vector = np.array(row[['p1', 'p2', 'p3', 'p4', 'p5']].tolist())\n",
@@ -244,15 +293,13 @@
         "\n",
         "            if euclidean_distance < current_threshold:\n",
         "                v_target = row['true_value_next_day']\n",
-        "                if current_base_vector.tolist() not in base_vectors_for_each_threshold:\n",
-        "                    base_vectors_for_each_threshold.append(current_base_vector.tolist())\n",
         "\n",
         "                accepted_results_list.append({\n",
         "                    'r1': feature_vector.tolist(),\n",
         "                    'v_target': v_target,\n",
         "              })\n",
         "\n",
-        "        if accepted_results_list and base_vectors_for_each_threshold: # Check if the list is not empty\n",
+        "        if accepted_results_list:\n",
         "            accepted_results_df = pd.DataFrame(accepted_results_list)\n",
         "            positive_count = (accepted_results_df['v_target'] > 0).sum()\n",
         "            negative_count = (accepted_results_df['v_target'] <= 0).sum()\n",
@@ -261,20 +308,10 @@
         "            r1_values = accepted_results_df['r1']\n",
         "            v_target_values = accepted_results_df['v_target']\n",
         "\n",
-        "            final_results.append({\n",
-        "                'r1': r1_values.tolist(),\n",
-        "                'v_target': v_target_values.tolist(),\n",
-        "                'B': base_vectors_for_each_threshold,\n",
-        "                'threshold': f\"{current_threshold:.1f}\",\n",
-        "                '% positive_Vtarget': f\"{positive_percentage:.2f}\",\n",
-        "                '% negative_Vtarget': f\"{negative_percentage:.2f}\"\n",
-        "            })\n",
+        "            writeInText(r1_values, v_target_values, current_base_vector.tolist(), current_threshold, positive_percentage, negative_percentage)\n",
         "\n",
-        "final_result_df = pd.DataFrame(final_results)\n",
-        "print(\"\\nResults Different THRESHOLDS:\")\n",
-        "final_result_df.to_csv('final_result_df.csv', index= True)\n",
         "end_time = datetime.now()\n",
-        "print(f\"Finished at => {end_time}\")\n",
+        "print(f\"\\nFinished at => {end_time}\")\n",
         "print(f\"Total time take => {end_time - start_time}\")"
       ]
     }
