base_vector generate one time.

--- a/Calculate_ED_for_all_dataset.ipynb
+++ b/Calculate_ED_for_all_dataset.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "2vHKLCk2Px_2"
       },
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -191,27 +191,26 @@
     {
       "cell_type": "code",
       "source": [
-        "def writeInText(r1_values, v_target_values, B, threshold, positive_percentage, negative_percentage):\n",
-        "  with open('final_result_df.txt', 'a') as f: # Changed mode to 'a' for append\n",
-        "    f.write(\"L set: \")\n",
-        "    f.write(\"r1: \")\n",
-        "    for r_list in r1_values:\n",
-        "        f.write(f\"{r_list} \")\n",
+        "def writeInText(accepted_results_df, B, threshold, positive_percentage, negative_percentage):\n",
+        "  with open('final_result_df.txt', 'a') as f:\n",
+        "    f.write(\"L set:\\n\")\n",
+        "    for index, row in accepted_results_df.iterrows():\n",
+        "        # Assuming column 0 is the feature vector list and column 1 is v_target\n",
+        "        feature_vector_str = ', '.join(map(str, row[0]))\n",
+        "        v_target_val = row[1]\n",
+        "        f.write(f\"[{feature_vector_str}, {v_target_val}]\\n\")\n",
         "\n",
-        "    f.write(\"v_target: \")\n",
-        "    f.write(\", \".join(map(str, v_target_values)))\n",
-        "\n",
-        "    f.write(\"\\nB vector: \")\n",
+        "    f.write(\"B vector:\\n\")\n",
         "    # Explicitly format B as comma-separated string without spaces\n",
         "    f.write(f\"[{','.join(map(str, B))}]\")\n",
         "\n",
-        "    f.write(\"\\nτ value: \")\n",
+        "    f.write(\"\\nτ value:\\n\")\n",
         "    f.write(f\"{threshold}\")\n",
         "\n",
-        "    f.write(\"\\n% of positive vtarget : \")\n",
-        "    f.write(f\"{positive_percentage}\\n\")\n",
+        "    f.write(\"\\n% of positive vtarget:\\n\")\n",
+        "    f.write(f\"{positive_percentage}\")\n",
         "\n",
-        "    f.write(\"\\n% of negative vtarget : \")\n",
+        "    f.write(\"\\n% of negative vtarget:\\n\")\n",
         "    f.write(f\"{negative_percentage}\")\n",
         "\n",
         "    f.write(\"\\n\\n-------------------------------\\n\\n\")\n",
@@ -222,9 +221,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4G9MVyjDbRZX",
-        "outputId": "9d530e25-203c-4193-cba6-ffaac2b2559f"
+        "outputId": "cdc41634-21e1-43bd-b5ef-6e24a6ba0bad"
       },
-      "execution_count": 31,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,26 +236,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 33,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "aoqDsVKMXsCf",
-        "outputId": "92cc2d4a-2b38-48f6-bda8-266c549ee8ec"
+        "outputId": "8f9d058d-60b0-4a11-c39a-636bf9ffe2b3"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Started at => 2025-12-27 11:29:02.905018\n",
+            "Generating new base vectors and saving them.\n",
+            "Started at => 2025-12-28 09:20:22.464790\n",
             "\n",
             "-----Calculating Euclidean Distance-----\n",
             "\n",
             "T: --> 0.5--> 0.6--> 0.7--> 0.8--> 0.9--> 1.0--> 1.1--> 1.2--> 1.3--> 1.4--> 1.5\n",
-            "Finished at => 2025-12-27 11:41:53.053070\n",
-            "Total time take => 0:12:50.148052\n"
+            "Finished at => 2025-12-28 09:38:56.253591\n",
+            "Total time take => 0:18:33.788801\n"
           ]
         }
       ],
@@ -264,9 +264,22 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "from datetime import datetime\n",
+        "import os\n",
         "\n",
-        "#Create base_vector range -2 to 2, each time take 5 datapoints for a vectors.\n",
-        "generated_base_vectors = np.random.uniform(low=-2.0, high=2.0, size=(50, 5))\n",
+        "# Define the filename for storing generated base vectors\n",
+        "base_vectors_file = 'generated_base_vectors.txt'\n",
+        "\n",
+        "# Ensure generated_base_vectors is created only once per kernel session and persisted\n",
+        "if os.path.exists(base_vectors_file):\n",
+        "    print(f\"Loading generated base vectors from {base_vectors_file}\")\n",
+        "    generated_base_vectors = np.loadtxt(base_vectors_file)\n",
+        "    # Reshape if only a single vector was saved (loadtxt might flatten it)\n",
+        "    if generated_base_vectors.ndim == 1:\n",
+        "        generated_base_vectors = generated_base_vectors.reshape(1, -1)\n",
+        "else:\n",
+        "    print(\"Generating new base vectors and saving them.\")\n",
+        "    generated_base_vectors = np.random.uniform(low=-2.0, high=2.0, size=(50, 5))\n",
+        "    np.savetxt(base_vectors_file, generated_base_vectors)\n",
         "\n",
         "\n",
         "start_time = datetime.now()\n",
@@ -294,21 +307,20 @@
         "            if euclidean_distance < current_threshold:\n",
         "                v_target = row['true_value_next_day']\n",
         "\n",
-        "                accepted_results_list.append({\n",
-        "                    'r1': feature_vector.tolist(),\n",
-        "                    'v_target': v_target,\n",
-        "              })\n",
+        "                # Modified: Append a list [feature_vector, v_target]\n",
+        "                accepted_results_list.append([feature_vector.tolist(), v_target])\n",
         "\n",
         "        if accepted_results_list:\n",
-        "            accepted_results_df = pd.DataFrame(accepted_results_list)\n",
+        "            # Modified: Create DataFrame with explicit column names\n",
+        "            accepted_results_df_without_col =  pd.DataFrame(accepted_results_list)\n",
+        "\n",
+        "            accepted_results_df = pd.DataFrame(accepted_results_list, columns=['r1', 'v_target'])\n",
         "            positive_count = (accepted_results_df['v_target'] > 0).sum()\n",
         "            negative_count = (accepted_results_df['v_target'] <= 0).sum()\n",
         "            positive_percentage=(positive_count/len(accepted_results_df))*100\n",
         "            negative_percentage=(negative_count/len(accepted_results_df))*100\n",
-        "            r1_values = accepted_results_df['r1']\n",
-        "            v_target_values = accepted_results_df['v_target']\n",
         "\n",
-        "            writeInText(r1_values, v_target_values, current_base_vector.tolist(), current_threshold, positive_percentage, negative_percentage)\n",
+        "            writeInText(accepted_results_df_without_col, current_base_vector.tolist(), current_threshold, positive_percentage, negative_percentage)\n",
         "\n",
         "end_time = datetime.now()\n",
         "print(f\"\\nFinished at => {end_time}\")\n",
