remove some files

--- a/Calculate_ED_till_2023.ipynb
+++ b/Calculate_ED_till_2023.ipynb
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_45151/3593940859.py:8: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "/tmp/ipykernel_62397/3593940859.py:8: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
       "  df = yf.download(ticker, start=\"2000-01-01\", end=\"2023-12-31\", progress=False)\n"
      ]
     },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "id": "2vHKLCk2Px_2"
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -250,13 +250,13 @@
      "output_type": "stream",
      "text": [
       "Loading generated base vectors from generated_base_vectors.txt\n",
-      "Started at => 2025-12-29 11:11:56.083439\n",
+      "Started at => 2025-12-29 12:08:25.104312\n",
       "\n",
       "-----Calculating Euclidean Distance-----\n",
       "\n",
       "T: --> 0.5--> 0.6--> 0.7--> 0.8--> 0.9--> 1.0--> 1.1--> 1.2--> 1.3--> 1.4--> 1.5\n",
-      "Finished at => 2025-12-29 11:37:39.280860\n",
-      "Total time take => 0:25:43.197421\n"
+      "Finished at => 2025-12-29 12:33:16.783126\n",
+      "Total time take => 0:24:51.678814\n"
      ]
     }
    ],
@@ -288,7 +288,7 @@
     "print(\"T: \", end=\"\")\n",
     "\n",
     "# Clear the file before starting to avoid appending to previous runs\n",
-    "with open('final_result_df.txt', 'w') as f:\n",
+    "with open('final_result_df_2023.txt', 'w') as f:\n",
     "    pass\n",
     "\n",
     "for current_threshold in np.arange(0.5, 1.51, 0.1):\n",
