sorted  by L set count, and save to csv

--- a/Calculate_ED_till_2023.ipynb
+++ b/Calculate_ED_till_2023.ipynb
@@ -329,6 +329,130 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     L_set_count threshold_value  \\\n",
+      "359         2861             1.5   \n",
+      "310         2424             1.4   \n",
+      "264         1974             1.3   \n",
+      "218         1517             1.2   \n",
+      "366         1370             1.5   \n",
+      "\n",
+      "                                                                                                 B_vector  \\\n",
+      "359   [0.6673177879279355,-0.399743965085662,0.1166337339292971,-0.4774067929209176,-0.38544785593128283]   \n",
+      "310   [0.6673177879279355,-0.399743965085662,0.1166337339292971,-0.4774067929209176,-0.38544785593128283]   \n",
+      "264   [0.6673177879279355,-0.399743965085662,0.1166337339292971,-0.4774067929209176,-0.38544785593128283]   \n",
+      "218   [0.6673177879279355,-0.399743965085662,0.1166337339292971,-0.4774067929209176,-0.38544785593128283]   \n",
+      "366  [-1.1523272049025688,0.5411143749381351,0.1461269041420521,-0.06325676014369375,-0.6721807878932626]   \n",
+      "\n",
+      "    percent_positive percent_negative  \n",
+      "359            50.98            49.02  \n",
+      "310            51.51            48.49  \n",
+      "264            51.80            48.20  \n",
+      "218            51.58            48.42  \n",
+      "366            50.04            49.96  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def parse_full_info_sorted(file_path):\n",
+    "    with open(file_path, 'r') as f:\n",
+    "        content = f.read()\n",
+    "\n",
+    "    # Split content by the separator line\n",
+    "    blocks = content.split('-------------------------------')\n",
+    "    \n",
+    "    data = []\n",
+    "\n",
+    "    for block in blocks:\n",
+    "        if not block.strip():\n",
+    "            continue\n",
+    "        \n",
+    "        lines = [line.strip() for line in block.strip().split('\\n')]\n",
+    "        \n",
+    "        record = {\n",
+    "            'L_set_count': 0,\n",
+    "            'threshold_value': None,\n",
+    "            'B_vector': None,\n",
+    "            'percent_positive': None,\n",
+    "            'percent_negative': None\n",
+    "        }\n",
+    "        \n",
+    "        # Extract Threshold (τ value)\n",
+    "        if 'τ value:' in lines:\n",
+    "            idx = lines.index('τ value:')\n",
+    "            if idx + 1 < len(lines):\n",
+    "                record['threshold_value'] = lines[idx+1]\n",
+    "        \n",
+    "        # Extract B Vector (Full String)\n",
+    "        if 'B vector:' in lines:\n",
+    "            idx = lines.index('B vector:')\n",
+    "            if idx + 1 < len(lines):\n",
+    "                record['B_vector'] = lines[idx+1]\n",
+    "\n",
+    "        # Extract Percentages\n",
+    "        if '% of positive vtarget:' in lines:\n",
+    "            idx = lines.index('% of positive vtarget:')\n",
+    "            if idx + 1 < len(lines):\n",
+    "                record['percent_positive'] = lines[idx+1]\n",
+    "                \n",
+    "        if '% of negative vtarget:' in lines:\n",
+    "            idx = lines.index('% of negative vtarget:')\n",
+    "            if idx + 1 < len(lines):\n",
+    "                record['percent_negative'] = lines[idx+1]\n",
+    "\n",
+    "        # Count L Set Vectors\n",
+    "        if 'L set:' in lines and 'B vector:' in lines:\n",
+    "            try:\n",
+    "                l_start = lines.index('L set:')\n",
+    "                b_start = lines.index('B vector:')\n",
+    "                \n",
+    "                count = 0\n",
+    "                # Count lines starting with '[' between labels\n",
+    "                for i in range(l_start + 1, b_start-1):\n",
+    "                    if lines[i].startswith('['):\n",
+    "                        count += 1\n",
+    "                record['L_set_count'] = count\n",
+    "            except ValueError:\n",
+    "                pass\n",
+    "\n",
+    "        # Only add records with valid B_vector\n",
+    "        if record['B_vector'] is not None:\n",
+    "            data.append(record)\n",
+    "\n",
+    "    # Create DataFrame\n",
+    "    df = pd.DataFrame(data)\n",
+    "    \n",
+    "    # Sort by count descending\n",
+    "    if not df.empty:\n",
+    "        df_sorted = df.sort_values(by='L_set_count', ascending=False)\n",
+    "        return df_sorted\n",
+    "    return df\n",
+    "\n",
+    "# Configure Pandas to show full column width\n",
+    "pd.set_option('display.max_colwidth', None)\n",
+    "\n",
+    "# Usage\n",
+    "file_name = 'final_result_df_2023.txt'\n",
+    "df_final = parse_full_info_sorted(file_name)\n",
+    "\n",
+    "# Select desired columns\n",
+    "columns_to_show = ['L_set_count', 'threshold_value', 'B_vector', 'percent_positive', 'percent_negative']\n",
+    "print(df_final[columns_to_show].head())\n",
+    "\n",
+    "# Save to CSV\n",
+    "df_final[columns_to_show].to_csv('sorted_l_set_full_info.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
