--- a/Calculate_ED_till_2023.ipynb
+++ b/Calculate_ED_till_2023.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -337,11 +337,11 @@
      "output_type": "stream",
      "text": [
       "     L_set_count threshold_value  \\\n",
-      "359         2861             1.5   \n",
-      "310         2424             1.4   \n",
-      "264         1974             1.3   \n",
-      "218         1517             1.2   \n",
-      "366         1370             1.5   \n",
+      "359         2862             1.5   \n",
+      "310         2425             1.4   \n",
+      "264         1975             1.3   \n",
+      "218         1518             1.2   \n",
+      "366         1371             1.5   \n",
       "\n",
       "                                                                                                 B_vector  \\\n",
       "359   [0.6673177879279355,-0.399743965085662,0.1166337339292971,-0.4774067929209176,-0.38544785593128283]   \n",
@@ -416,7 +416,7 @@
     "                \n",
     "                count = 0\n",
     "                # Count lines starting with '[' between labels\n",
-    "                for i in range(l_start + 1, b_start-1):\n",
+    "                for i in range(l_start + 1, b_start):\n",
     "                    if lines[i].startswith('['):\n",
     "                        count += 1\n",
     "                record['L_set_count'] = count\n",
