B vector: [1.6085788331083064,-0.0518004411331483,-0.6413941226817417,-0.8585278694831779,0.6172863137371993] τ value: 1.4; Give good

--- a/2024_2025/analysis_2024_2025.ipynb
+++ b/2024_2025/analysis_2024_2025.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a91a6006-aae0-4ca8-951d-01ea8d518467",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "3ff56e2a-da4a-458f-90ed-2ffd1c77cd27",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_78168/2977780310.py:10: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "/tmp/ipykernel_83700/2977780310.py:10: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
       "  df = yf.download(ticker, start=start_date, end=end_date, progress=False)\n"
      ]
     },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "56914e2c-acc0-4343-8e91-ff565dd67996",
    "metadata": {},
    "outputs": [
@@ -82,21 +82,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                         Close                High                 Low  \\\n",
-      "Price                                                                    \n",
-      "2025-12-19  1.1725666522979736  1.1737502813339233  1.1704120635986328   \n",
-      "2025-12-22  1.1708093881607056   1.177024483680725  1.1710835695266724   \n",
-      "2025-12-23  1.1765950918197632    1.18035888671875   1.176429033279419   \n",
-      "2025-12-24   1.179551362991333  1.1809163093566895  1.1774264574050903   \n",
-      "2025-12-26  1.1785364151000977   1.179940938949585  1.1763044595718384   \n",
-      "\n",
-      "                          Open Volume  \n",
-      "Price                                  \n",
-      "2025-12-19  1.1725391149520874      0  \n",
-      "2025-12-22  1.1710835695266724      0  \n",
-      "2025-12-23  1.1764428615570068      0  \n",
-      "2025-12-24   1.179565191268921      0  \n",
-      "2025-12-26   1.178383708000183      0  \n"
+      "               Close\n",
+      "Date                \n",
+      "2025-12-23  1.176595\n",
+      "2025-12-24  1.179551\n",
+      "2025-12-26  1.178536\n",
+      "2025-12-29  1.177274\n",
+      "2025-12-30  1.176471\n"
      ]
     }
    ],
@@ -104,7 +96,7 @@
     "df = pd.read_csv(\"EURUSD_2024_to_Today_Close.csv\", index_col=0, parse_dates=True)\n",
     "\n",
     "\n",
-    "print(forex_df.tail())\n",
+    "print(df.tail())\n",
     "df['difference'] = df['Close'].pct_change() * 100\n",
     "df.head()\n",
     "df.to_csv('eurusd_daily_2024_2025_with_difference.csv')\n"
@@ -112,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "4f1c0ee5-c4ca-4a5b-9a50-c79317eddb8e",
    "metadata": {},
    "outputs": [
@@ -153,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "79396ffc-ed4e-489a-b07f-4940c4337362",
    "metadata": {},
    "outputs": [
@@ -194,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "c2cfdc6e-28e7-4baa-96c7-4d909580f350",
    "metadata": {},
    "outputs": [
@@ -202,13 +194,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started at => 2025-12-29 21:43:26.116376\n",
+      "Started at => 2025-12-30 19:40:02.115068\n",
       "\n",
       "-----Calculating Euclidean Distance-----\n",
       "\n",
       "T: \n",
-      "Finished at => 2025-12-29 21:43:26.459979\n",
-      "Total time take => 0:00:00.343603\n"
+      "Finished at => 2025-12-30 19:40:02.727582\n",
+      "Total time take => 0:00:00.612514\n"
      ]
     }
    ],
@@ -218,8 +210,8 @@
     "from datetime import datetime\n",
     "import os\n",
     "\n",
-    "base_vectors = [-1.1523272049025688, 0.5411143749381351, 0.1461269041420521, -0.06325676014369375, -0.6721807878932626]\n",
-    "THRESHOLD = 0.9\n",
+    "base_vectors = [1.6085788331083064,-0.0518004411331483,-0.6413941226817417,-0.8585278694831779,0.6172863137371993]\n",
+    "THRESHOLD = 1.4\n",
     "current_base_vector = np.array(base_vectors)\n",
     "\n",
     "\n",
@@ -252,6 +244,8 @@
     "    positive_percentage=(positive_count/len(accepted_results_df))*100\n",
     "    negative_percentage=(negative_count/len(accepted_results_df))*100\n",
     "    writeInText(accepted_results_df_without_col, current_base_vector.tolist(), THRESHOLD, positive_percentage, negative_percentage)\n",
+    "else:\n",
+    "    print(\"No values is accepted\")\n",
     "\n",
     "end_time = datetime.now()\n",
     "print(f\"\\nFinished at => {end_time}\")\n",
